--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,9 +12,8 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "outDir": "./out",
-    "rootDir": "./src",
+    "rootDir": ".",
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "out", "dist"]
+  "exclude": ["node_modules"]
 }
