--- a/packages/pb-language-server/package.json
+++ b/packages/pb-language-server/package.json
@@ -1,21 +1,22 @@
-
 {
-  "name": "@powerbuilder-lsp/language-server",
-  "version": "0.1.0",
-  "description": "PowerBuilder Language Server Protocol implementation",
-  "main": "./out/server.js",
-  "scripts": {
-    "build": "tsc -b",
-    "watch": "tsc -b --watch",
-    "clean": "rm -rf out"
-  },
-  "dependencies": {
-    "@powerbuilder-lsp/language-service": "^0.1.0",
-    "vscode-languageserver": "^9.0.1",
-    "vscode-languageserver-textdocument": "^1.0.11"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.0"
-  }
+	"name": "@powerbuilder-language-support/language-server",
+	"version": "0.1.0",
+	"description": "PowerBuilder Language Server Protocol implementation",
+	"main": "./out/server.js",
+	"scripts": {
+		"build": "tsc -b",
+		"watch": "tsc -b --watch",
+		"clean": "rm -rf out",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix"
+	},
+	"dependencies": {
+		"@powerbuilder-lsp/language-service": "^0.1.0",
+		"vscode-languageserver": "^9.0.1",
+		"vscode-languageserver-textdocument": "^1.0.11"
+	},
+	"devDependencies": {
+		"@types/node": "^20.10.0",
+		"typescript": "^5.3.0"
+	}
 }
