--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 	],
 	"scripts": {
 		"build": "npm run build --workspaces --if-present",
-		"watch": "npm run watch --workspaces --if-present",
+		"watch": "npm-run-all -p watch:* ",
+		"watch:vscode-client": "npm run watch -w ./vscode-client",
+		"watch:server": "npm run watch -w ./packages/pb-language-server",
+		"watch:service": "npm run watch -w ./packages/pb-language-service",
 		"clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
 		"test": "npm run test --workspaces --if-present",
 		"lint": "npm run lint --workspaces --if-present",
@@ -32,5 +35,8 @@
 		"prettier": "^3.6.2",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.2"
+	},
+	"dependencies": {
+		"npm-run-all": "^4.1.5"
 	}
 }
