--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
 		"eslint-plugin-sort-class-members": "^1.21.0",
 		"prettier": "^3.6.2",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.2"
-	},
-	"dependencies": {
+		"typescript-eslint": "^8.46.2",
 		"npm-run-all": "^4.1.5"
-	}
+	},
+	"dependencies": {}
 }
