--- a/packages/pb-language-server/package.json
+++ b/packages/pb-language-server/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"@powerbuilder-language-support/language-service": "^0.1.0",
 		"vscode-languageserver": "^9.0.1",
-		"vscode-languageserver-textdocument": "^1.0.11"
+		"vscode-languageserver-textdocument": "^1.0.11",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.0",
