fix: fix clean script and types

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"watch:vscode-client": "npm run watch -w ./vscode-client",
 		"watch:server": "npm run watch -w ./packages/pb-language-server",
 		"watch:service": "npm run watch -w ./packages/pb-language-service",
-		"clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
+		"watch:logger": "npm run watch -w ./packages/pb-language-logger",
+		"clean": "npm run clean --workspaces --if-present && rm -rf node_modules && rm -rf package.json && rm -rm packages/node_modules",
 		"test": "npm run test --workspaces --if-present",
 		"lint": "npm run lint --workspaces --if-present",
 		"lint:fix": "npm run lint:fix --workspaces --if-present",
