chore: config packages

--- a/packages/pb-language-server/package.json
+++ b/packages/pb-language-server/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@powerbuilder-language-support/language-service": "^0.1.0",
+		"@powerbuilder-language-support/logger": "^0.1.0",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.11",
 		"zod": "^4.1.12"
