chore: add logger to the dependencies

--- a/packages/pb-language-service/package.json
+++ b/packages/pb-language-service/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@pb-shrugged/tree-sitter-powerbuilder": "^2.0.4",
+		"@powerbuilder-language-support/logger": "^0.1.0",
 		"tree-sitter": "^0.25.0",
 		"vscode-languageserver-types": "^3.17.5"
 	},
