--- a/vscode-client/package.json
+++ b/vscode-client/package.json
@@ -39,13 +39,13 @@
 			"type": "object",
 			"title": "PowerBuilder Language Support Client Configuration",
 			"properties": {
-				"powerBuilderLanguageServer.maxNumberOfProblems": {
+				"powerbuilderLanguageServer.maxNumberOfProblems": {
 					"scope": "resource",
 					"type": "number",
 					"default": 101,
 					"description": "Controls the maximum number of problems produced by the server."
 				},
-				"powerBuilderLanguageServer.trace.server": {
+				"powerbuilderLanguageServer.trace.server": {
 					"scope": "window",
 					"type": "string",
 					"enum": [
@@ -56,7 +56,7 @@
 					"default": "off",
 					"description": "Traces the communication between VS Code and the language server."
 				},
-				"powerBuilderLanguageServer.logLevel": {
+				"powerbuilderLanguageServer.logLevel": {
 					"type": "string",
 					"default": "info",
 					"enum": [
@@ -68,7 +68,21 @@
 					"description": "Controls the log level of the language server."
 				}
 			}
-		}
+		},
+		"commands": [
+			{
+				"command": "powerbuilderLanguageSupport.restartServer",
+				"title": "Restart PowerBuilder Language Server"
+			},
+			{
+				"command": "powerbuilderLanguageSupport.showServerStatus",
+				"title": "Show PowerBuilder Language Server Status"
+			},
+			{
+				"command": "powerbuilderLanguageSupport.showOutput",
+				"title": "Show PowerBuilder extension output"
+			}
+		]
 	},
 	"scripts": {
 		"build": "tsc -b",
