--- a/packages/pb-language-service/package.json
+++ b/packages/pb-language-service/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@pb-shrugged/tree-sitter-powerbuilder": "^2.0.5",
 		"@powerbuilder-language-support/logger": "^0.1.0",
+		"fast-glob": "^2.0.1",
 		"tree-sitter": "^0.25.0",
 		"vscode-languageserver-types": "^3.17.5"
 	},
