--- a/packages/pb-language-service/package.json
+++ b/packages/pb-language-service/package.json
@@ -5,9 +5,9 @@
 	"main": "./out/index.js",
 	"types": "./out/index.d.ts",
 	"scripts": {
-		"build": "tsc -b",
+		"build": "tsc -b --clean && tsc -b",
 		"watch": "tsc -b --watch",
-		"clean": "rm -rf out && rm -rf node_modules && rm -f tsconfig.tsbuildinfo",
+		"clean": "tsc -b --clean && rm -rf node_modules",
 		"test": "jest",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix"
